--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,21 @@
 spring.application.name=FoodBook
-# Database configuration
+# Database Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=none
+# Cloudinary Configuration
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
 
-#spring.flyway.enabled=false
-#spring.flyway.locations=classpath:db/migration
-spring.jpa.show-sql=true
-
-spring.web.resources.static-locations=${STATIC_IMAGES_PATH}
-
-
-# Umo?liwienie CORS w Spring Boot
+# CORS Configuration
 spring.webmvc.cors.allowed-origins=*
 spring.webmvc.cors.allowed-methods=GET,POST,PUT,DELETE
 spring.webmvc.cors.allowed-headers=Content-Type,Authorization
 spring.webmvc.cors.allow-credentials=true
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
