changes in pom and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.webmvc.cors.allowed-methods=GET,POST,PUT,DELETE
 spring.webmvc.cors.allowed-headers=Content-Type,Authorization
 spring.webmvc.cors.allow-credentials=true
 
-
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+#spring.jpa.open-in-view=false
 
