--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,4 @@ spring.webmvc.cors.allow-credentials=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
-#spring.jpa.open-in-view=false
-
+spring.jpa.open-in-view=false
