--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.webmvc.cors.allow-credentials=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+
+server.port=8080
+
